# liepose-diffusion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
dataset/: download_voc.sh
dataset/bop_datasets/: download_bop.sh
docker/: workspace.Dockerfile
lib/bop_renderer/: CMakeLists.txt  README.md
lib/bop_renderer/CMake/: FindOSMesa.cmake
lib/bop_renderer/osmesa-install/: osmesa-install.sh
lib/bop_renderer/samples/: renderer_minimal.py  renderer_test.py
lib/bop_toolkit/: setup.py
lib/bop_toolkit/bop_toolkit_lib/: misc.py  pose_error.py
src/liepose/: __init__.py
src/liepose/data/: __init__.py  base.py  utils.py
src/liepose/data/bop/: __init__.py  dataset.py  evaluator.py  registry.py
src/liepose/data/bop/bop_scripts/: __init__.py  eval_bop_pose.py  eval_calc_errors.py  eval_calc_scores.py
src/liepose/data/bop/data_utils/: __init__.py  augment.py  common.py  image.py
src/liepose/data/bop/data_utils/transform/: __init__.py  affiner.py  remapper.py
src/liepose/data/bop/dataset_loaders/: __init__.py  base_loader.py  icbin_loader.py  tless_loader.py
src/liepose/data/symsol/: dataset.py  evaluator.py
src/liepose/data/symsolt/: dataset.py  evaluator.py  synth.py
src/liepose/data/symsolt/presets/: __init__.py  base.py  cone.py  cube.py  cylinder.py  icosahedron.py  tetrahedron.py
src/liepose/exp/: __init__.py  model.py  testbed.py
src/liepose/exp/bop/: dataset_registry.py  run.py  testbed.py
src/liepose/exp/symsol/: run.py  testbed.py
src/liepose/exp/symsolt/: run.py  testbed.py
src/liepose/metrics/: __init__.py  r3so3.py  se3.py  so3.py
src/liepose/noise/: __init__.py  base.py
src/liepose/noise/ve/: __init__.py  base.py  log.py  power.py
src/liepose/noise/vp/: __init__.py  base.py  power.py
src/liepose/utils/: __init__.py  common.py  config.py  exploration.py  jnpfn.py  nest.py  npfn.py  ops.py  vis.py
